--- a/css/main.css
+++ b/css/main.css
@@ -9,13 +9,15 @@ h1, h2, h3, h4, h5, h6 { margin: 0; }
 /***************************************/
 
 .container {
-    margin: 0 auto 0 auto;
+    margin: 0 auto;
     max-width: 1170px;
 }
 
 section {
     display: flex;
 }
+
+/************* FLEX STYLES *************/
 
 .flex {
     display: flex;
@@ -29,6 +31,8 @@ section {
     flex: 1;
 }
 
+/************* POSITION STYLES *************/
+
 .align-center {
     align-items: center;
 }
@@ -39,4 +43,51 @@ section {
 
 .space-between {
     justify-content: space-between;
+}
+
+/************* BUTTONS *************/
+
+.btn {
+    cursor: pointer;
+    border: 0;
+    padding: 6px 12px;
+    border-radius: 3px;
+    line-height: 1.4;
+}
+
+.btn-default {
+    color: #ffffff;
+    background-color: #faa541;
+}
+
+.btn-primary {
+    color: #ffffff;
+    background-color: #364147;
+}
+
+/************* FORM STYLES *************/
+
+.form-control {
+    display: block;
+    padding: 6px 12px;
+    border: 1px solid #a0a0a0;
+    color: #8598a2;
+    line-height: 1.4;
+}
+
+/************* TEXT STYLES *************/
+
+.text-light {
+    font-size: 30px;
+    color: #a0a0a0;
+}
+
+.text-primary {
+    font-size: 16px;
+    color: #364147;
+}
+
+.text-secondary {
+    font-size: 30px;
+    color: #faa541;
 }
